[project]
name = "reqable-mcp"
version = "0.1.0"
description = "MCP Server for reading Reqable packet capture records"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "lmdb>=1.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
